--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#Bedroom">Bedroom</a></li>
                 <li><a href="#Dining">Dining</a></li>
                 <li><a href="#Kitchen">Kitchen</a></li>
-                <li><a href="#">Backyard</a></li>
+                <li><a href="#Backyard">Backyard</a></li>
             </ul>
         </div>
 
